--- a/appLogic/index.html
+++ b/appLogic/index.html
@@ -162,17 +162,17 @@
 <label for="q8b">B. I definitely want some central conflict but that's about it.</label>
 <br>
 <input type="radio" name="question8" id="q8c" value="C" />
-<label for="q8c">C. I want the events to be ficticious, but to play ou just like real life.</label>
+<label for="q8c">C. I want the events to be ficticious, but to play out just like real life.</label>
 <br>
 <input type="radio" name="question8" id="q8d" value="D" / >
-<label for="q8d">D. I want to rack my brains for months tr;ying to figure out how that movie really ended.</label>
+<label for="q8d">D. I want to rack my brains for months trying to figure out how that movie really ended.</label>
 <br>
 <input type="radio" name="question8" id="q8e" value="E" / >
 <label for="q8e">E. I want to become smarter by having watched a film.</label>
 <br>
 
 <br><br>
-<input type="button" value="Submit"  class="btn btn-primary btn-lg" onclick="checkQuiz();"/>
+<input type="button" value="Submit"  class="btn btn-primary btn-lg" id="submit" onclick="checkQuiz();"/>
 </form>
       </div>
 
